# toMateTo

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  chess  cmake_install.cmake  gmon.out  magic_gen  main.cpp  toMateTo
chess_gui/: gui.cpp  gui.h
generation/: king_tables.cpp  king_tables.h  knight_tables.cpp  knight_tables.h  magic_gen.cpp  magic_gen.h
move_generation/: TODO  chess_board.cpp  chess_board.h  move_stack.h
testing/: stock_perft.py
toMateTo_engine/move_generation/: TODO  chess_board.cpp  chess_board.h  move_stack.cpp  move_stack.h  types.cpp  types.h
toMateTo_engine/table_generation/: king_tables.cpp  king_tables.h  knight_tables.cpp  knight_tables.h  magic_gen  magic_gen.cpp  magic_gen.h  magic_helper_functions.cpp  magic_helper_functions.h  magic_king_tables.cpp  magic_king_tables.h
toMateTo_engine/testing/: debugging.cpp  debugging.h
